# GameViewer

./: CMakeLists.txt  Game.cpp  Game.h  GameModel.cpp  GameModel.h  GameViewer.cpp  GameViewer.h  GameViewer.sln  GameViewer.vcxproj  GameViewer.vcxproj.filters  JSONReader.cpp  JSONReader.h  ModelStructs.cpp  ModelStructs.h  Readme.txt  Team.h  VSslnToCMakePlugin.vsix  WebDataReader.cpp  WebDataReader.h  main.cpp
Release2/GameViewer.tlog/: CL.command.1.tlog  GameViewer.lastbuildstate
enc_temp_folder/62149a3717716527d8aa1a58de5f59ff/: GameViewer.cpp
